fix: address review comments – extract BottomNavigation, FilterUserComponent, move filter button to TopAppBar